--- a/README
+++ b/README
@@ -1,4 +1,6 @@
 Miscellaneous coding things
+
+look in directorys for more specific README
 ============================
 
  * RobotC - code for robots used in my engineering class
